--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "devPartner": "Data Source=192.168.0.103;Initial Catalog=biblioteca;User ID=sa;Password=Deividy159-+;Pooling=False"
   }
 }
